--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
         <p class="museum">
           On the second day I visited several museums. As I was crossing the
           threshold of those old traditional houses, my mind was going back in
-          time and imagining the life people had. It felt as if the houses were
-          alive and they were sharing their stories with me.
+          time and imagining the life people had. I was bombarded with all kinds
+          of emotions.It felt as if the houses were alive and they were sharing 
+          their stories with me.
         </p>
         <div class="image-container">
           <img src="images/DTI-Koprivshtitsa-3.jpg" alt="house" />
