--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="card-5">
         <h3>Hill tops</h3>
         <p class="grave-1">
-          The tiny steap streets were leading me to hidden places. I could
+          The tiny steep streets were leading me to hidden places. I could
           easily lose a sense of time and space wandering around and capturing
           those stunning views with my lenses. Looking at the hill tops nearby,
           I was propelled to reach them.
