--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br />
       </p>
       <button>
-        <a href="https://www.desiretoinspire.me/" target="_blank"
+        <a href="" target="_blank"
           >Visit my website</a
         >
       </button>
